@@ -40,7 +40,7 @@ static def getRuneLiteVersion() {
             String removeName = inputLine.substring(inputLine.indexOf("</a>") + 4)
             if (!name.contains("SNAPSHOT") && removeName != "") {
                 if (compareSemanticVersion(latestName, name)) {
-                    latestName = name;
+                    latestName = name
                 }
             }
         }
@@ -112,6 +112,12 @@ jar {
 task shadedJar(type: JavaCompile) {
     project.configurations.runtimeOnly.setCanBeResolved(true)
     jar {
+        manifest {
+            attributes(
+                    'Class-Path': sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath,
+                    'Main-Class': 'net.runelite.rsb.botLauncher.Application'
+            )
+        }
         from{
             configurations.compileClasspath.collect {it.isDirectory() ? it: zipTree(it)}
         }
@@ -125,6 +131,16 @@ task launchClientWithScript(type: JavaExec) {
     classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath
     getMainClass() set "net.runelite.rsb.botLauncher.Application"
     jvmArgs "-debug".split(" ")
+    args "--bot-runelite --developer-mode".split(" ")
+    dependsOn shadedJar
+}
+
+task launchClientMac(type: JavaExec) {
+    group = "Execution"
+    description = "Runs the main method within RSB"
+    classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath
+    getMainClass() set "net.runelite.rsb.botLauncher.Application"
+    jvmArgs "-debug --add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED --add-opens=java.desktop/sun.awt=ALL-UNNAMED".split(" ")
     args "--bot-runelite --developer-mode".split(" ")
     dependsOn shadedJar
 }
